# recursive-babylm

./: .gitignore  PAPER.md  README.md  modal_train.py  pyproject.toml
notes/: design_decisions.md
paper/: paper.md
paper/figures/: blimp_eval.json  ckpt_eval.json  make_figures.py  paired_uncertainty.json  paired_uncertainty.py
paper/latex/: custom.bib  main.tex
src/baseline/: config.py  model.py
src/common/: attention.py  blimp_eval.py  data.py  layers.py  param_count.py  pilot.py  smoke_test.py  tokenizer.py  train.py  variants.py
src/gdn_baseline/2to1/: config.py  model.py
src/gdn_baseline/3to1/: config.py  model.py
src/recursion_gdn/2to1/: config.py  model.py
src/recursion_gdn/3to1/: config.py  model.py
